--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
-
+h1 {
+    text-align: center;
+}
+body {
+    background-image: url("https://i.ytimg.com/vi/0HKvBh-W1tg/maxresdefault.jpg");
+}
+#result {
+    color: blue;
+    font-size:35px;
+}
