--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center;
 }
 body {
-    background-image: url("https://i.ytimg.com/vi/0HKvBh-W1tg/maxresdefault.jpg");
+    background-color:pink;
 }
 #result {
     color: blue;
